<resources>
    <string name="app_name">e-Connect</string>
    <string name="register">register\n</string>
    <string name="click_here_to_reset">reset\n</string>
    <string name="click_here_to_Reset">Reset</string>
    <string name="Register">Register</string>
    <string name="loading">loading</string>
    <string name="registered_user_since">since\n</string>
    <string name="Gender">Gender</string>
    <string name="user_display_picture">display</string>
    <string name="Name">Name</string>
    <string name="Email">Email\n</string>
    <string name="Dob">Dob\n</string>
    <string name="Mobile">Mobile</string>
    <string name="update_profile">Update Profile</string>
    <string name="login">Login</string>
    <string name="welcome_nto_ne_connect_app">Welcome\nto\nE- Connect App</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register2">Register</string>
    <string name="about">about</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign-up</string>
    <string name="please_register_yourself_to_continue_with_the_amazing_experience">Please register yourself to continue with the amazing experience!</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="viewname">viewname</string>
    <string name="viewemail">viewemail</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="viewdob">viewdob</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)*</string>
    <string name="select_your_dob">select your dob</string>
    <string name="datepicker">datepicker</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="viewmobile">viewmobile</string>
    <string name="mobile">Mobile*</string>
    <string name="enter_your_mobile_no_without_91">enter your mobile no. (without +91)</string>
    <string name="viewpwd">viewpwd</string>
    <string name="password">Password*</string>
    <string name="enter_your_password">enter your password</string>
    <string name="hide">hide</string>
    <string name="i_agree_with_the_terms_of_service_and_privacy_policy">I agree with the Terms of Service and Privacy Policy</string>
    <string name="email2">Email*</string>
    <string name="title_activity_videoimageplayer">videoimageplayer</string>
    <string name="tab_text_1">Photos</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Profile</string>
    <string name="create_post">Create Post</string>
    <string name="add_friend">Add Friend</string>
</resources>