<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".FirstActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            app:srcCompat="@drawable/title"
            android:contentDescription="@string/logo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="150dp"
            android:id="@+id/trt"
            app:srcCompat="@drawable/trt"
            android:contentDescription="@string/about" />

        <TextView
            android:id="@+id/textView_main_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trt"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_nto_ne_connect_app"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_main_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_marginTop="30dp"
            android:text="@string/do_not_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/register2"
            android:textColor="@color/white"/>


    </RelativeLayout>

</ScrollView>